Prod V2/main/default/objects/User/fields/Customer_Target__c.field-meta.xml
<CustomField>
    <fullName>Customer_Target__c</fullName>
    <label>Customer Target</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>