Prod V2/main/default/objects/User/fields/Odoo_Sales_Person__c.field-meta.xml
<CustomField>
    <fullName>Odoo_Sales_Person__c</fullName>
    <externalId>true</externalId>
    <label>Odoo Sales Person</label>
    <length>255</length>
    <type>Text</type>
</CustomField>