Prod V2/main/default/objects/User/fields/Revenue_Target__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Target__c</fullName>
    <label>Revenue Target</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>